--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div class="bubble smile"></div>
     </div>
     <nav class="main-navigation container">
+        <a href="#react">React</a>
         <a href="#back-end">Back-end</a>
         <a href="#group-project">Group project</a>
         <a href="#js-intro">JS Intro</a>
@@ -887,24 +888,28 @@
                 </a>
             </div>
         </div>
-        <!--
-07:54 - async funkcijos
-09:50 - read funkcijos analizė
-18:26 - create funkcija
-26:35 - update funkcija (truncate() paaiškinimas)
-30:25 - delete funkcija
-30:58 -  fs.unlink() paaiškinimas
-46:50 - tekstinių failų skaitymas: readPublic ir fullPublicPath  funkcijos
-01:02:36 - binary failų skaitymas
-01:29:33 - apie res.end() - kaip atsakymas suinčiamas klientui
-01:33:10 - dėl back-end index.html
-01:43:49 - testas su admin.css
-01:48:04 - writeHead() metodas
+        <div class="week">
+            <header>
+                <h2>
+                    <a href="https://github.com/A-Kija/didziapedziai" target="_blank" id="react">
+                        REACT
+                    </a>
+                </h2>
 
-        -->
+                <a href="https://github.com/JurgitaE/09-didziapedziai" target="_blank"> Personal Repo for the project </a>
+            </header>
+            <div class="day">
+                <h3>2023-02-09 - Lesson 007: React elements, using styling in the elements, properties (props), using Sass </h3>
+                <a class="youtube" href="https://balticinstitute.sharepoint.com/sites/JavaScript22.11.14/Bendrai%20naudojami%20dokumentai/General/Recordings/General-20230209_120152-Meeting%20Recording.mp4?web=1" target="_blank">Youtube video 7
+                </a>
+                <p><a href="https://sass-lang.com/documentation/syntax/structure">Sass documentation link</a></p>
+
+            </div>
+        </div>
+
 
         <a href="#" class="fa fa-angle-up back-to-top"></a>
-        <!-- /imagine prompt:abandoned city after cataclysm, red sunset, destroyed skyscrapers and homes with no windows, autumn, funny clown patting relaxed dirty black cat with amber eyes in front of the picture, old newspapers and leaves flying  in the wind, melancholic, digital surrealistism -->
+
         <!-- week template 
                 <div class="week">
                     <header>
