--- a/index.html
+++ b/index.html
@@ -943,7 +943,9 @@
                 <a href="https://www.w3schools.com/nodejs/obj_http_serverresponse.asp" target="_blank">RESPOMSE:
                     ServerResponse Methods and Properties</a>
                 <p><span class="code">server.listen(optional: port, hostname, backlog, callback)</span> method creates a
-                    listener on the specified port or path. <a href="https://www.w3schools.com/nodejs/met_server_listen.asp" target="_blank">server.listen() Method</a></p>
+                    listener on the specified port or path.
+                    <a href="https://www.w3schools.com/nodejs/met_server_listen.asp" target="_blank">server.listen() Method</a>
+                </p>
                 <p><a href="https://nodejs.org/api/url.html#new-urlinput-base" class="code">new URL(input[,
                         base])</a></p>
             </div>
@@ -955,7 +957,9 @@
                 <a class="youtube" href="https://www.youtube.com/watch?v=TXiyegwlJ2Q" target="_blank">Youtube video part
                     76
                 </a>
-                <p>to add <span class="code">NODE_ENV=value</span> parameter in the terminal write <span class="code">NODE_ENV=value node .</span> Parameter will be put under <span class="code">process.env</span> object.</p>
+                <p>to add <span class="code">NODE_ENV=value</span> parameter in the terminal write <span class="code">NODE_ENV=value node .
+                    </span> Parameter will be put under <span class="code">process.env</span>
+                    object.</p>
             </div>
             <div class="day">
                 <h3>2023-01-24 - utility functions, CRUD intro, fs module, await-async functions, promises</h3>
@@ -1006,10 +1010,34 @@
             <div class="day">
                 <h3>2023-02-09 - Lesson 007: React elements, using styling in the elements, properties (props), using
                     Sass </h3>
-                <a class="youtube" href="https://balticinstitute.sharepoint.com/sites/JavaScript22.11.14/Bendrai%20naudojami%20dokumentai/General/Recordings/General-20230209_120152-Meeting%20Recording.mp4?web=1" target="_blank">Youtube video 7
+                <a class="youtube" href="https://balticinstitute.sharepoint.com/sites/JavaScript22.11.14/Bendrai%20naudojami%20dokumentai/General/Recordings/General-20230209_120152-Meeting%20Recording.mp4?web=1" target="_blank">Teams video 7
                 </a>
                 <p><a href="https://sass-lang.com/documentation/syntax/structure">Sass documentation link</a></p>
-
+            </div>
+            <div class="day">
+                <h3>2023-02-14 - Lesson 009: useState() with rectangles, Unique identifiers </h3>
+                <a class="youtube" href="https://balticinstitute.sharepoint.com/sites/JavaScript22.11.14/Bendrai%20naudojami%20dokumentai/General/Recordings/Meeting%20in%20_General_-20230214_120147-Meeting%20Recording.mp4?web=1" target="_blank">Teams video 9
+                </a>
+                <p><a href="https://www.npmjs.com/package/uuid">Unique identifiers</a></p>
+            </div>
+            <div class="day">
+                <h3>2023-02-28 - Servers, browsers, requests, responses</h3>
+                <a class="youtube" href="https://balticinstitute.sharepoint.com/sites/JavaScript22.11.14/Bendrai%20naudojami%20dokumentai/General/Recordings/Meeting%20in%20General-20230228_120121-Meeting%20Recording.mp4?web=1" target="_blank">Teams video 16
+                </a>
+                <h2>Request methods - CRUD</h2>
+                <ul>
+                    <li>GET - READ</li>
+                    <li>POST - CREATE</li>
+                    <li>DELETE - X 2</li>
+                    <li>PUT - EDIT</li>
+                </ul>
+                <p>Request is a string consisting two parts: HEADER (additional info for browser) and BODY (main info).
+                    Important information in the header is content-type (e.g. text/css)</p>
+                <p>Main response part is Status Code</p>
+                <p>Installing Express: <a href="https://expressjs.com/en/starter/installing.html">Getting started with
+                        Express</a>. Install in different folder than React. Create app.js file in the folder, copy Hello world
+                    example. Change port 3000 to something else. Install nodemon (<span class="code"> npm i -D
+                        nodemon)</span>. Add script to launch nodemon <span class="code">"scripts": { "start": "nodemon app.js" }</span></p>
             </div>
         </div>
 
