--- a/index.html
+++ b/index.html
@@ -1021,7 +1021,7 @@
                 <p><a href="https://www.npmjs.com/package/uuid">Unique identifiers</a></p>
             </div>
             <div class="day">
-                <h3>2023-02-28 - Servers, browsers, requests, responses</h3>
+                <h3>2023-02-28 - Lesson 016: Servers, browsers, requests, responses</h3>
                 <a class="youtube" href="https://balticinstitute.sharepoint.com/sites/JavaScript22.11.14/Bendrai%20naudojami%20dokumentai/General/Recordings/Meeting%20in%20General-20230228_120121-Meeting%20Recording.mp4?web=1" target="_blank">Teams video 16
                 </a>
                 <h2>Request methods - CRUD</h2>
@@ -1038,6 +1038,26 @@
                         Express</a>. Install in different folder than React. Create app.js file in the folder, copy Hello world
                     example. Change port 3000 to something else. Install nodemon (<span class="code"> npm i -D
                         nodemon)</span>. Add script to launch nodemon <span class="code">"scripts": { "start": "nodemon app.js" }</span></p>
+            </div>
+            <div class="day">
+                <h3>2023-03-01 - Lesson 017: CORS, CRUD</h3>
+                <a class="youtube" href="https://balticinstitute.sharepoint.com/sites/JavaScript22.11.14/Bendrai%20naudojami%20dokumentai/General/Recordings/General-20230301_120202-Meeting%20Recording.mp4?web=1" target="_blank">Teams video 17
+                </a>
+                <p><span class="code">npm i cors</span> in server folder</p>
+                <p>To start server include code <span class="code">app.use(
+                        express.urlencoded({
+                        extended: true,
+                        })
+                        );
+
+                        app.use(express.json());</span></p>
+                <p><a href="https://nodejs.dev/en/learn/reading-files-with-nodejs/">Reading files with Node.js</a>.</p>
+            </div>
+            <div class="day">
+                <h3>2023-03-02 - Lesson 018: </h3>
+                <a class="youtube" href="https://balticinstitute.sharepoint.com/sites/JavaScript22.11.14/Bendrai%20naudojami%20dokumentai/General/Recordings/JS%20018-20230302_120202-Meeting%20Recording.mp4?web=1" target="_blank">Teams video 18
+                </a>
+
             </div>
         </div>
 
