--- a/index.html
+++ b/index.html
@@ -1040,7 +1040,7 @@
                         nodemon)</span>. Add script to launch nodemon <span class="code">"scripts": { "start": "nodemon app.js" }</span></p>
             </div>
             <div class="day">
-                <h3>2023-03-01 - Lesson 017: CORS, CRUD</h3>
+                <h3>2023-03-01 - Lesson 017: CORS, CRUD (get, post, delete)</h3>
                 <a class="youtube" href="https://balticinstitute.sharepoint.com/sites/JavaScript22.11.14/Bendrai%20naudojami%20dokumentai/General/Recordings/General-20230301_120202-Meeting%20Recording.mp4?web=1" target="_blank">Teams video 17
                 </a>
                 <p><span class="code">npm i cors</span> in server folder</p>
@@ -1054,8 +1054,15 @@
                 <p><a href="https://nodejs.dev/en/learn/reading-files-with-nodejs/">Reading files with Node.js</a>.</p>
             </div>
             <div class="day">
-                <h3>2023-03-02 - Lesson 018: </h3>
+                <h3>2023-03-02 - Lesson 018: Edit (put), context</h3>
                 <a class="youtube" href="https://balticinstitute.sharepoint.com/sites/JavaScript22.11.14/Bendrai%20naudojami%20dokumentai/General/Recordings/JS%20018-20230302_120202-Meeting%20Recording.mp4?web=1" target="_blank">Teams video 18
+                </a>
+                <p>Creating context <span class="code">const ContextData = createContext();</span></p>
+                <p>USing context data <span class="code">const sq2 = useContext(ContextData);</span>. This creates a hook</p>
+            </div>
+            <div class="day">
+                <h3>2023-03-06 - Lesson 019: context, custom hooks: dices2 - custom hook for delete, messages</h3>
+                <a class="youtube" href="https://balticinstitute.sharepoint.com/sites/JavaScript22.11.14/Bendrai%20naudojami%20dokumentai/General/Recordings/Meeting%20in%20_General_-20230306_120424-Meeting%20Recording.mp4?web=1" target="_blank">Teams video 19
                 </a>
 
             </div>
