--- a/index.html
+++ b/index.html
@@ -1064,6 +1064,18 @@
                 <h3>2023-03-06 - Lesson 019: context, custom hooks: dices2 - custom hook for delete, messages</h3>
                 <a class="youtube" href="https://balticinstitute.sharepoint.com/sites/JavaScript22.11.14/Bendrai%20naudojami%20dokumentai/General/Recordings/Meeting%20in%20_General_-20230306_120424-Meeting%20Recording.mp4?web=1" target="_blank">Teams video 19
                 </a>
+            </div>
+            <div class="day">
+                <h3>2023-03-07 - Lesson 020: post, put, get (dices2), r2 projects - simple server (write, read)</h3>
+                <a class="youtube" href="https://balticinstitute.sharepoint.com/sites/JavaScript22.11.14/Bendrai%20naudojami%20dokumentai/General/Recordings/JS%20020-20230307_120503-Meeting%20Recording.mp4?web=1" target="_blank">Teams video 20
+                </a>
+
+            </div>
+            <div class="day">
+                <h3>2023-03-08 - Lesson 021:r2 project - simple server</h3>
+                <a class="youtube" href="https://balticinstitute.sharepoint.com/sites/JavaScript22.11.14/Bendrai%20naudojami%20dokumentai/General/Recordings/JS%20021-20230308_120332-Meeting%20Recording.mp4?web=1" target="_blank">Teams video 21 Part 1
+                    <a class="youtube" href="https://balticinstitute.sharepoint.com/sites/JavaScript22.11.14/Bendrai%20naudojami%20dokumentai/General/Recordings/General-20230308_132207-Meeting%20Recording.mp4?web=1" target="_blank">Teams video 21 Part 1
+                    </a>
 
             </div>
         </div>
@@ -1072,6 +1084,11 @@
         <a href="#" class="fa fa-angle-up back-to-top"></a>
 
         <!-- week template <div class="week"> <header> <h2> <a href="#" target="_blank" id=""> PROJECT NAME </a> </h2>
+            <div class="week">
+                <header>
+                    <h2>
+                        <a href="" target="_blank" id=""></a>
+                    </h2>
 
                     <a href="" target="_blank"> Personal Repo for the project </a>
                 </header>
