--- a/index.html
+++ b/index.html
@@ -1072,11 +1072,39 @@
 
             </div>
             <div class="day">
-                <h3>2023-03-08 - Lesson 021:r2 project - simple server</h3>
+                <h3>2023-03-08 - Lesson 021: r2 project - simple server, add, remove, messages</h3>
                 <a class="youtube" href="https://balticinstitute.sharepoint.com/sites/JavaScript22.11.14/Bendrai%20naudojami%20dokumentai/General/Recordings/JS%20021-20230308_120332-Meeting%20Recording.mp4?web=1" target="_blank">Teams video 21 Part 1
                     <a class="youtube" href="https://balticinstitute.sharepoint.com/sites/JavaScript22.11.14/Bendrai%20naudojami%20dokumentai/General/Recordings/General-20230308_132207-Meeting%20Recording.mp4?web=1" target="_blank">Teams video 21 Part 2
                     </a>
-
+            </div>
+            <div class="day">
+                <h3>2023-03-09 - Lesson 022: cookies, login with cookies</h3>
+                <a class="youtube" href="https://balticinstitute.sharepoint.com/sites/JavaScript22.11.14/Bendrai%20naudojami%20dokumentai/General/Recordings/JS%20022-20230309_120108-Meeting%20Recording.mp4?web=1" target="_blank">Teams video 22</a>
+                <p>Authentication, identification and authorization (giving rights after authentication or identification)</p>
+                <p>Main cookie parts: name, value and expiration. Coockie goes to localStorage along with server response header. Browser sends all coockies in the head along with get, post, put, delete methods</p>
+                <p>Install in SERVER <span class="code">npm install cookie-parser</span>. <a href="https://expressjs.com/en/resources/middleware/cookie-parser.html">cookie-parser</a></p>
+                <p>Also install on server side: <span class="code">npm i md5</span>. <a href="https://www.npmjs.com/package/md5">md5 website</a></p>
+            </div>
+            <div class="day">
+                <h3>2023-03-13 - Lesson 023: routes, Auth, logout</h3>
+                <a class="youtube" href="https://balticinstitute.sharepoint.com/sites/JavaScript22.11.14/Bendrai%20naudojami%20dokumentai/General/Recordings/Meeting%20in%20_General_-20230313_120352-Meeting%20Recording.mp4?web=1" target="_blank">Teams video 23
+                </a>
+                <p><a href="https://www.apachefriends.org/download.html">DB manager</a></p>
+            </div>
+            <div class="day">
+                <h3>2023-03-14 - Lesson 024: routes chart, auth chart, users register</h3>
+                <a class="youtube" href="https://balticinstitute.sharepoint.com/sites/JavaScript22.11.14/Bendrai%20naudojami%20dokumentai/General/Recordings/Meeting%20in%20_General_-20230314_120047-Meeting%20Recording.mp4?web=1" target="_blank">Teams video 24
+                </a>
+            </div>
+            <div class="day">
+                <h3>2023-03-15 - Lesson 025: delete user, home page, roles, middleware</h3>
+                <a class="youtube" href="https://balticinstitute.sharepoint.com/sites/JavaScript22.11.14/Bendrai%20naudojami%20dokumentai/General/Recordings/JS%20025-20230315_120017-Meeting%20Recording.mp4?web=1" target="_blank">Teams video 25
+                </a>
+            </div>
+            <div class="day">
+                <h3>2023-03-16 - Lesson 026: roles with middleware (auth), databases (mysql, MariaDB), phpMyAdmin</h3>
+                <a class="youtube" href="https://balticinstitute.sharepoint.com/sites/JavaScript22.11.14/Bendrai%20naudojami%20dokumentai/General/Recordings/Meeting%20in%20_General_-20230316_120002-Meeting%20Recording.mp4?web=1" target="_blank">Teams video 26
+                </a>
             </div>
         </div>
 
